--- a/index.html
+++ b/index.html
@@ -3,192 +3,177 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Paket Wisata Dieng | Explore Dieng dengan Layanan Profesional & Harga Terbaik</title>
-  <meta name="description" content="Paket wisata Dieng terlengkap. Pilihan trip 1–3 hari, start dari Wonosobo, Yogyakarta, Semarang, Solo, Purwokerto, dan kota lainnya. Layanan terbaik, itinerary fleksibel, destinasi populer, harga transparan, tanpa biaya tersembunyi.">
-  <link rel="canonical" href="https://paketdieng.my.id/">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin>
-  <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin>
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Paket Wisata Dieng | Pilihan Trip, Fasilitas Lengkap, Harga Terbaik">
-  <meta property="og:description" content="Jelajahi keindahan Dieng Plateau dengan paket wisata terpercaya. Private & open trip, fasilitas lengkap, guide profesional. Booking mudah, harga jujur.">
-  <meta property="og:url" content="https://paketdieng.my.id/">
-  <meta property="og:image" content="https://paketdieng.my.id/og-image.jpg">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Paket Wisata Dieng">
-  <meta name="twitter:description" content="Paket wisata Dieng profesional & transparan. Pilihan lengkap, harga terbaik.">
-  <meta name="twitter:image" content="https://paketdieng.my.id/og-image.jpg">
+  <title>Paket Wisata Dieng — Informasi paket tour Dieng terbaru</title>
   <style>
     body {
+      background: #f8f9fa;
+      color: #222;
+      font-family: 'Linux Libertine', 'Georgia', 'Times New Roman', serif;
       margin: 0;
-      padding: 0;
-      font-family: 'Atkinson', Arial, sans-serif;
-      background: linear-gradient(180deg, #e5eaf0 0 220px, #fff 220px 100%);
-      color: #223;
-      font-size: 1.1rem;
+      font-size: 1.09rem;
+      line-height: 1.7;
     }
-    header {
+    .mw-body {
+      max-width: 860px;
+      margin: 3.1em auto 2.5em auto;
       background: #fff;
-      box-shadow: 0 2px 12px #2337ff08;
-      padding: 0.5rem 0;
-      position: sticky;
-      top: 0; z-index: 9;
+      border: 1px solid #a2a9b1;
+      border-radius: 8px;
+      box-shadow: 0 3px 18px #0001;
+      padding: 2.3em 1.8em 2em 1.8em;
     }
-    .container {
-      width: 92%;
-      max-width: 900px;
-      margin: auto;
-    }
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      font-size: 1.38rem;
-      font-weight: bold;
-      color: #2337ff;
-      text-decoration: none;
-      letter-spacing: .5px;
-      margin: 0.2em 0;
-    }
-    .brand-icon {
-      background: #2337ff15;
-      border-radius: 50%;
-      padding: 6px;
-      display: flex;
-      align-items: center;
-    }
-    main {
-      padding: 2rem 0 3rem 0;
-    }
-    .hero-title {
-      font-size: 2.3rem;
-      font-weight: 800;
-      line-height: 1.18;
-      color: #19335a;
-      margin-bottom: 0.4em;
-    }
-    .hero-desc {
-      color: #233;
-      font-size: 1.14rem;
-      margin-bottom: 2.1rem;
-      max-width: 550px;
-    }
-    .tour-cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1.5em;
-    }
-    .card {
-      background: #fff;
-      border-radius: 1.3rem;
-      box-shadow: 0 2px 16px #2d3b6413;
-      padding: 1.4em 1.25em 1.2em 1.25em;
-      transition: box-shadow .19s, transform .17s;
-      text-decoration: none;
-      color: inherit;
-      border: 1.4px solid #edf1f5;
-      display: flex;
-      flex-direction: column;
-      min-height: 230px;
-      position: relative;
-    }
-    .card:hover {
-      box-shadow: 0 8px 32px #2d3b6422;
-      transform: translateY(-5px) scale(1.03);
-      border-color: #d0dcfa;
-    }
-    .card-icon {
-      font-size: 2.2em;
-      margin-bottom: .25em;
-      color: #2337ff;
-      opacity: .92;
-      filter: drop-shadow(0 1.5px 6px #2337ff19);
-    }
-    .card-title {
-      font-weight: 700;
-      font-size: 1.18em;
-      margin-bottom: .45em;
-      color: #142b55;
-      letter-spacing: .03em;
-    }
-    .card-desc {
-      font-size: .99em;
-      color: #31425a;
-      line-height: 1.6;
-      flex-grow: 1;
-    }
-    .card-footer {
-      font-size: .98em;
-      color: #2337ffb0;
+    .mw-title {
+      font-size: 2.25em;
       font-weight: 600;
-      margin-top: .9em;
+      margin: 0 0 0.12em 0;
+      color: #1a1a1a;
+      letter-spacing: .01em;
     }
-    footer {
-      background: linear-gradient(90deg,#f2f6fc 60%,#e5eaf0 100%);
-      color: #66708a;
-      font-size: 1em;
-      text-align: center;
-      padding: 2.4em 0 2em 0;
+    .mw-url {
+      font-size: 1.09em;
+      color: #555;
+      margin-bottom: 1.2em;
+      border-bottom: 1px solid #eaecf0;
+      padding-bottom: 0.7em;
+      display: block;
+      word-break: break-all;
+    }
+    .toc {
+      background: #f6f6f6;
+      border: 1px solid #a2a9b1;
+      border-radius: 4px;
+      padding: 1em 1.2em;
+      margin: 2.1em 0 2.1em 0;
+      font-size: .97em;
+      max-width: 370px;
+    }
+    .toc-title {
+      font-weight: bold;
+      margin-bottom: 0.5em;
+      font-size: 1.07em;
+      color: #393939;
+    }
+    .toc ul {
+      margin: 0;
+      padding-left: 1.3em;
+      list-style: decimal;
+    }
+    .toc li {
+      margin: 0.25em 0;
+      line-height: 1.5;
+    }
+    h2, h3 {
+      color: #2a4b7c;
+      font-weight: 600;
       margin-top: 2em;
+      margin-bottom: .7em;
+      line-height: 1.25;
     }
-    @media (max-width: 640px) {
-      .hero-title { font-size: 1.38rem; }
-      .container { width: 97%; }
-      .tour-cards { gap: 1.1em; }
-      main { padding: 1.1em 0 2.3em 0; }
-      .card { min-height: 180px; padding: 1.2em 1em 1em 1em;}
+    h3 {
+      font-size: 1.11em;
+      color: #30507d;
+      margin-top: 1.3em;
+    }
+    a { color: #3366cc; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .mw-footer {
+      text-align: center;
+      font-size: .98em;
+      color: #888;
+      margin-top: 3.7em;
+      padding: 1.7em 0 0.6em 0;
+      border-top: 1px solid #dbe1e8;
+      background: none;
+    }
+    @media (max-width: 650px) {
+      .mw-body { padding: 1.1em .7em; }
+      .toc { font-size: 1em; padding: .8em 0.7em; }
+      .mw-title { font-size: 1.35em; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="container" style="display:flex;justify-content:space-between;align-items:center;">
-      <a href="/" class="brand">
-        <span class="brand-icon">
-          <svg width="33" height="33" viewBox="0 0 36 36" fill="none"><circle cx="18" cy="18" r="18" fill="#2337ff" fill-opacity="0.11"/><path d="M8 27L16 14L22 22L27 16L32 27H8Z" fill="#2337ff"/><circle cx="16" cy="15" r="1.4" fill="#fbbc05"/></svg>
-        </span>
-        PaketDieng.id
-      </a>
-    </div>
-  </header>
-  <main class="container">
-    <h1 class="hero-title">Paket Wisata Dieng<br>Terbaik & Terlengkap 2025</h1>
-    <div class="hero-desc">
-      Nikmati liburan ke Dataran Tinggi Dieng dengan pengalaman terbaik. Tersedia private trip, open trip, dan custom tour mulai 1 hari, 2 hari 1 malam, hingga 3 hari 2 malam. 
-      Penjemputan dari Wonosobo, Purwokerto, Yogyakarta, Semarang, Solo, atau kota lain. Fasilitas lengkap, destinasi hits, dan harga transparan.
-    </div>
+  <article class="mw-body">
+    <h1 class="mw-title">Paket Wisata Dieng</h1>
+    <span class="mw-url">Situs ini: <a href="https://paketdieng.my.id/">https://paketdieng.my.id/</a></span>
 
-    <section class="tour-cards">
-      <a href="#" class="card" aria-label="Paket Wisata Dieng 1 Hari">
-        <span class="card-icon">🌄</span>
-        <div class="card-title">Paket Dieng 1 Hari</div>
-        <div class="card-desc">Tour singkat full destinasi, dapat sunrise Sikunir, Kawah Sikidang, Candi Arjuna, dan kuliner khas. Cocok untuk trip cepat & anti ribet.</div>
-        <div class="card-footer">Mulai 1 orang • All in</div>
-      </a>
-      <a href="#" class="card" aria-label="Paket Wisata Dieng 2 Hari 1 Malam">
-        <span class="card-icon">🏕️</span>
-        <div class="card-title">Paket Dieng 2 Hari 1 Malam</div>
-        <div class="card-desc">Trip menginap, itinerary fleksibel. Sunrise, semua destinasi utama, kuliner lokal, pengalaman lebih lengkap. Tersedia private & open trip.</div>
-        <div class="card-footer">Penginapan + 4x makan</div>
-      </a>
-      <a href="#" class="card" aria-label="Paket Wisata Dieng 3 Hari 2 Malam">
-        <span class="card-icon">🌅</span>
-        <div class="card-title">Paket Dieng 3 Hari 2 Malam</div>
-        <div class="card-desc">Liburan panjang ke Dieng dan Wonosobo. Jelajah destinasi populer, hidden gem, dan wisata budaya. Cocok untuk keluarga atau group.</div>
-        <div class="card-footer">Termasuk guide profesional</div>
-      </a>
-      <a href="#" class="card" aria-label="Paket Custom & Open Trip Dieng">
-        <span class="card-icon">🗺️</span>
-        <div class="card-title">Open Trip & Custom Tour</div>
-        <div class="card-desc">Gabung open trip atau buat trip custom sesuai kebutuhan. Flexible penjemputan, itinerary bisa diatur sendiri.</div>
-        <div class="card-footer">Cocok untuk solo traveler & komunitas</div>
-      </a>
-    </section>
-  </main>
-  <footer>
-    &copy; 2025 PaketDieng.id. Semua hak cipta dilindungi.<br>
-    Website by Wikipedieng.
+    <nav class="toc" aria-label="Daftar isi">
+      <div class="toc-title">Daftar isi</div>
+      <ul>
+        <li><a href="#definisi">Definisi</a></li>
+        <li><a href="#manfaat">Manfaat Paket Wisata</a></li>
+        <li><a href="#fasilitas">Fasilitas Umum</a></li>
+        <li><a href="#destinasi">Destinasi Populer</a></li>
+        <li><a href="#pilihan">Pilihan Paket 1–3 Hari</a></li>
+        <li><a href="#penutup">Penutup</a></li>
+      </ul>
+    </nav>
+
+    <h2 id="definisi">Definisi</h2>
+    <p>
+      <strong>Paket wisata Dieng</strong> adalah rangkaian layanan perjalanan wisata ke kawasan Dataran Tinggi Dieng, Jawa Tengah, yang disusun dalam satu paket terintegrasi. Paket ini umumnya meliputi transportasi, tiket masuk destinasi wisata, penginapan (untuk paket lebih dari 1 hari), konsumsi, serta pemandu wisata. Semua layanan dirancang agar wisatawan dapat menikmati perjalanan dengan lebih mudah, terorganisir, dan efisien waktu.
+    </p>
+
+    <h2 id="manfaat">Manfaat Paket Wisata</h2>
+    <ul>
+      <li>Memberikan kemudahan dalam perencanaan perjalanan tanpa harus mengatur detail logistik sendiri.</li>
+      <li>Waktu kunjungan lebih efisien dengan itinerary terjadwal.</li>
+      <li>Biaya lebih transparan dan cenderung hemat karena sudah termasuk tiket destinasi, transportasi, dan layanan lain.</li>
+      <li>Adanya pemandu atau tour leader yang membantu wisatawan memahami destinasi secara lebih baik.</li>
+      <li>Mengurangi risiko kesalahan rute, keterlambatan, atau informasi kurang akurat seputar wisata Dieng.</li>
+    </ul>
+
+    <h2 id="fasilitas">Fasilitas Umum</h2>
+    <p>
+      Fasilitas dalam paket wisata Dieng dapat bervariasi, namun umumnya meliputi:
+    </p>
+    <ul>
+      <li>Transportasi selama wisata (mobil/minibus/elf/bus)</li>
+      <li>Tiket masuk destinasi wisata</li>
+      <li>Penginapan (khusus paket lebih dari 1 hari)</li>
+      <li>Konsumsi (makan pagi/siang/malam, snack, air mineral)</li>
+      <li>Pemandu wisata (tour guide/leader)</li>
+      <li>Dokumentasi perjalanan (foto, video, opsional)</li>
+      <li>Asuransi perjalanan (opsional, tergantung penyedia)</li>
+    </ul>
+
+    <h2 id="destinasi">Destinasi Populer</h2>
+    <p>
+      Paket wisata Dieng biasanya mencakup beberapa destinasi favorit, seperti:
+    </p>
+    <ul>
+      <li>Bukit Sikunir dan Telaga Cebong (spot sunrise)</li>
+      <li>Kawah Sikidang</li>
+      <li>Kompleks Candi Arjuna</li>
+      <li>Telaga Warna dan Telaga Pengilon</li>
+      <li>Batu Ratapan Angin</li>
+      <li>Dieng Plateau Theater</li>
+      <li>Telaga Menjer</li>
+      <li>Kebun Teh dan Gardu Pandang Tieng</li>
+      <li>Museum Kailasa Dieng</li>
+    </ul>
+
+    <h2 id="pilihan">Pilihan Paket 1–3 Hari</h2>
+    <ul>
+      <li>
+        <strong>Paket 1 Hari:</strong> Wisata singkat, berangkat dini hari atau pagi, kunjungan ke beberapa destinasi utama, biasanya tanpa menginap.
+      </li>
+      <li>
+        <strong>Paket 2 Hari 1 Malam:</strong> Termasuk menginap satu malam di Dieng atau Wonosobo, itinerary lebih lengkap, waktu lebih fleksibel untuk eksplorasi.
+      </li>
+      <li>
+        <strong>Paket 3 Hari 2 Malam:</strong> Pilihan untuk wisatawan yang ingin menikmati lebih banyak destinasi dan pengalaman, cocok untuk keluarga atau group.
+      </li>
+    </ul>
+
+    <h2 id="penutup">Penutup</h2>
+    <p>
+      Informasi pada halaman ini disusun secara netral untuk referensi wisatawan atau peneliti yang ingin mengetahui seluk-beluk paket wisata Dieng. Semua isi bukan promosi, dan situs <a href="https://paketdieng.my.id/">paketdieng.my.id</a> tidak menawarkan penjualan atau layanan perjalanan wisata.
+    </p>
+  </article>
+  <footer class="mw-footer">
+    Paket Wisata Dieng.<br>
+    &copy; 2025 paketdieng.my.id
   </footer>
 </body>
 </html>
