--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Paket Wisata Dieng — Informasi paket tour Dieng terbaru</title>
+  <meta name="description" content="Informasi netral tentang paket wisata Dieng: definisi, manfaat, fasilitas, destinasi, pilihan paket, tanpa promosi atau penjualan.">
+  <link rel="canonical" href="https://paketdieng.my.id/">
   <style>
     body {
       background: #f8f9fa;
@@ -13,9 +15,48 @@
       font-size: 1.09rem;
       line-height: 1.7;
     }
+    .mw-header {
+      background: #fff;
+      border-bottom: 1px solid #a2a9b1;
+      box-shadow: 0 2px 9px #c1cad14c;
+      padding: .6em 0 .6em 0;
+      margin-bottom: 1.8em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .mw-header-inner {
+      max-width: 860px;
+      width: 100%;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      padding: 0 1.6em;
+    }
+    .mw-header-logo {
+      display: flex;
+      align-items: center;
+      background: #f8f9fa;
+      border-radius: 50%;
+      padding: 4px;
+      border: 1px solid #a2a9b1;
+      margin-right: 9px;
+      height: 38px;
+      width: 38px;
+      justify-content: center;
+    }
+    .mw-header-title {
+      font-family: 'Linux Libertine', 'Georgia', 'Times New Roman', serif;
+      font-size: 1.35em;
+      font-weight: bold;
+      color: #222;
+      letter-spacing: 0.5px;
+      text-decoration: none;
+    }
     .mw-body {
       max-width: 860px;
-      margin: 3.1em auto 2.5em auto;
+      margin: 0 auto 2.5em auto;
       background: #fff;
       border: 1px solid #a2a9b1;
       border-radius: 8px;
@@ -86,13 +127,26 @@
       background: none;
     }
     @media (max-width: 650px) {
-      .mw-body { padding: 1.1em .7em; }
+      .mw-header-inner, .mw-body { padding: 0 .7em; }
       .toc { font-size: 1em; padding: .8em 0.7em; }
       .mw-title { font-size: 1.35em; }
     }
   </style>
 </head>
 <body>
+  <header class="mw-header">
+    <div class="mw-header-inner">
+      <span class="mw-header-logo">
+        <!-- Logo buku ala Wikipedia -->
+        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" aria-label="Wiki Logo">
+          <rect x="3" y="5" width="14" height="16" rx="2" fill="#e5e9f3" stroke="#a2a9b1" stroke-width="1.2"/>
+          <rect x="7" y="3" width="14" height="16" rx="2" fill="#fff" stroke="#a2a9b1" stroke-width="1.2"/>
+          <path d="M9 7h9M9 10h9M9 13h9M9 16h7" stroke="#6c7ca4" stroke-width="1.1" stroke-linecap="round"/>
+        </svg>
+      </span>
+      <a href="/" class="mw-header-title">paketdieng.my.id</a>
+    </div>
+  </header>
   <article class="mw-body">
     <h1 class="mw-title">Paket Wisata Dieng</h1>
     <span class="mw-url">Situs ini: <a href="https://paketdieng.my.id/">https://paketdieng.my.id/</a></span>
