--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Paket Wisata Dieng — Informasi paket tour Dieng terbaru</title>
-  <meta name="description" content="Informasi netral tentang paket wisata Dieng: definisi, manfaat, fasilitas, destinasi, pilihan paket, tanpa promosi atau penjualan.">
   <link rel="canonical" href="https://paketdieng.my.id/">
   <style>
     body {
@@ -149,7 +148,7 @@
   </header>
   <article class="mw-body">
     <h1 class="mw-title">Paket Wisata Dieng</h1>
-    <span class="mw-url">Situs ini: <a href="https://paketdieng.my.id/">https://paketdieng.my.id/</a></span>
+    <span class="mw-url">Situs ini: <a href="/">https://paketdieng.my.id/</a></span>
 
     <nav class="toc" aria-label="Daftar isi">
       <div class="toc-title">Daftar isi</div>
@@ -165,15 +164,16 @@
 
     <h2 id="definisi">Definisi</h2>
     <p>
-      <strong>Paket wisata Dieng</strong> adalah rangkaian layanan perjalanan wisata ke kawasan Dataran Tinggi Dieng, Jawa Tengah, yang disusun dalam satu paket terintegrasi. Paket ini umumnya meliputi transportasi, tiket masuk destinasi wisata, penginapan (untuk paket lebih dari 1 hari), konsumsi, serta pemandu wisata. Semua layanan dirancang agar wisatawan dapat menikmati perjalanan dengan lebih mudah, terorganisir, dan efisien waktu.
+      <strong>Paket wisata Dieng</strong> adalah rangkaian layanan perjalanan wisata ke kawasan <a href="/dataran-tinggi-dieng">Dataran Tinggi Dieng</a>, Jawa Tengah, yang disusun dalam satu paket terintegrasi. Paket ini umumnya meliputi <a href="transportasi-dieng">transportasi</a>, <a href="tiket-wisata-dieng">
+tiket masuk destinasi wisata</a>, <a href="/penginapan-dieng">penginapan</a> (untuk paket lebih dari 1 hari), konsumsi, serta <a href="/pemandu-wisata-dieng">pemandu wisata</a>. Semua layanan dirancang agar wisatawan dapat menikmati perjalanan dengan lebih mudah, terorganisir, dan efisien waktu.
     </p>
 
     <h2 id="manfaat">Manfaat Paket Wisata</h2>
     <ul>
       <li>Memberikan kemudahan dalam perencanaan perjalanan tanpa harus mengatur detail logistik sendiri.</li>
-      <li>Waktu kunjungan lebih efisien dengan itinerary terjadwal.</li>
+      <li>Waktu kunjungan lebih efisien dengan <a href="/itinerary-dieng">itinerary</a> terjadwal.</li>
       <li>Biaya lebih transparan dan cenderung hemat karena sudah termasuk tiket destinasi, transportasi, dan layanan lain.</li>
-      <li>Adanya pemandu atau tour leader yang membantu wisatawan memahami destinasi secara lebih baik.</li>
+      <li>Adanya pemandu atau tour leader yang membantu wisatawan memahami <a href="/wisata-dieng">wisata Dieng</a> secara lebih baik.</li>
       <li>Mengurangi risiko kesalahan rute, keterlambatan, atau informasi kurang akurat seputar wisata Dieng.</li>
     </ul>
 
@@ -210,13 +210,13 @@
     <h2 id="pilihan">Pilihan Paket 1–3 Hari</h2>
     <ul>
       <li>
-        <strong>Paket 1 Hari:</strong> Wisata singkat, berangkat dini hari atau pagi, kunjungan ke beberapa destinasi utama, biasanya tanpa menginap.
+        <strong><a href="/paket-wisata-1-hari">Paket 1 Hari</a>:</strong> Wisata singkat, berangkat dini hari atau pagi, kunjungan ke beberapa destinasi utama, biasanya tanpa menginap.
       </li>
       <li>
-        <strong>Paket 2 Hari 1 Malam:</strong> Termasuk menginap satu malam di Dieng atau Wonosobo, itinerary lebih lengkap, waktu lebih fleksibel untuk eksplorasi.
+        <strong><a href="/paket-wisata-2-hari">Paket 2 Hari 1 Malam</a>:</strong> Termasuk menginap satu malam di Dieng atau Wonosobo, itinerary lebih lengkap, waktu lebih fleksibel untuk eksplorasi.
       </li>
       <li>
-        <strong>Paket 3 Hari 2 Malam:</strong> Pilihan untuk wisatawan yang ingin menikmati lebih banyak destinasi dan pengalaman, cocok untuk keluarga atau group.
+        <strong><a href="/paket-wisata-3-hari">Paket 3 Hari 2 Malam</a>:</strong> Pilihan untuk wisatawan yang ingin menikmati lebih banyak destinasi dan pengalaman, cocok untuk keluarga atau group.
       </li>
     </ul>
 
