--- a/paket-wisata-3-hari.html
+++ b/paket-wisata-3-hari.html
@@ -147,7 +147,7 @@
   </header>
   <article class="mw-body">
     <h1 class="mw-title">Paket Wisata Dieng 3 Hari 2 Malam</h1>
-    <span class="mw-url">Situs ini: <a href="https://paketdieng.my.id/paket-dieng-3-hari">https://paketdieng.my.id/paket-dieng-3-hari</a></span>
+    <span class="mw-url">Situs ini: <a href="https://paketdieng.my.id/paket-wisata-3-hari">https://paketdieng.my.id/paket-wisata-3-hari</a></span>
 
     <nav class="toc" aria-label="Daftar isi">
       <div class="toc-title">Daftar isi</div>
