--- a/daftar-isi.html
+++ b/daftar-isi.html
@@ -9,16 +9,21 @@
   <div id="mw-header"></div>
   <article class="mw-body">
     <h1 class="mw-title">Daftar Isi Situs</h1>
-    <ul>
-      <li><a href="about/index.html">Tentang Paket Wisata Dieng</a></li>
-      <li><a href="blog/first-post/index.html">First post</a></li>
-      <li><a href="blog/index.html">Astro Blog</a></li>
-      <li><a href="blog/markdown-style-guide/index.html">Markdown Style Guide</a></li>
-      <li><a href="blog/second-post/index.html">Second post</a></li>
-      <li><a href="blog/third-post/index.html">Third post</a></li>
-      <li><a href="blog/using-mdx/index.html">Using MDX</a></li>
-      <li><a href="index.html">Astro Blog</a></li>
-    </ul>
+<ul>
+  <li><a href="index.html">Paket Wisata Dieng</a></li>
+  <li><a href="paket-wisata-1-hari.html">Paket Wisata Dieng 1 Hari</a></li>
+  <li><a href="paket-wisata-2-hari.html">Paket Wisata Dieng 2 Hari 1 Malam</a></li>
+  <li><a href="paket-wisata-3-hari.html">Paket Wisata Dieng 3 Hari 2 Malam</a></li>
+  <li><a href="penginapan-dieng.html">Penginapan di Dieng</a></li>
+  <li><a href="pemandu-wisata-dieng.html">Pemandu Wisata Dieng</a></li>
+  <li><a href="tiket-wisata-dieng.html">Harga Tiket Wisata Dieng</a></li>
+  <li><a href="transportasi-dieng.html">Transportasi ke Dieng</a></li>
+  <li><a href="dataran-tinggi-dieng.html">Dataran Tinggi Dieng</a></li>
+  <li><a href="wisata-dieng.html">Wisata Dieng</a></li>
+  <li><a href="itinerary-dieng.html">Itinerary Wisata Dieng</a></li>
+  <li><a href="ketentuan.html">Ketentuan & Syarat Paket Wisata</a></li>
+</ul>
+
   </article>
   <div id="mw-footer"></div>
   <script>
