--- a/index.html
+++ b/index.html
@@ -3,151 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Paket Wisata Dieng — Informasi paket tour Dieng terbaru</title>
+  <title>Paket Wisata Dieng 2025 — Informasi paket tour Dieng terbaru</title>
   <link rel="canonical" href="https://paketdieng.my.id/">
-  <style>
-    body {
-      background: #f8f9fa;
-      color: #222;
-      font-family: 'Linux Libertine', 'Georgia', 'Times New Roman', serif;
-      margin: 0;
-      font-size: 1.09rem;
-      line-height: 1.7;
-    }
-    .mw-header {
-      background: #fff;
-      border-bottom: 1px solid #a2a9b1;
-      box-shadow: 0 2px 9px #c1cad14c;
-      padding: .6em 0 .6em 0;
-      margin-bottom: 1.8em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .mw-header-inner {
-      max-width: 860px;
-      width: 100%;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      gap: 14px;
-      padding: 0 1.6em;
-    }
-    .mw-header-logo {
-      display: flex;
-      align-items: center;
-      background: #f8f9fa;
-      border-radius: 50%;
-      padding: 4px;
-      border: 1px solid #a2a9b1;
-      margin-right: 9px;
-      height: 38px;
-      width: 38px;
-      justify-content: center;
-    }
-    .mw-header-title {
-      font-family: 'Linux Libertine', 'Georgia', 'Times New Roman', serif;
-      font-size: 1.35em;
-      font-weight: bold;
-      color: #222;
-      letter-spacing: 0.5px;
-      text-decoration: none;
-    }
-    .mw-body {
-      max-width: 860px;
-      margin: 0 auto 2.5em auto;
-      background: #fff;
-      border: 1px solid #a2a9b1;
-      border-radius: 8px;
-      box-shadow: 0 3px 18px #0001;
-      padding: 2.3em 1.8em 2em 1.8em;
-    }
-    .mw-title {
-      font-size: 2.25em;
-      font-weight: 600;
-      margin: 0 0 0.12em 0;
-      color: #1a1a1a;
-      letter-spacing: .01em;
-    }
-    .mw-url {
-      font-size: 1.09em;
-      color: #555;
-      margin-bottom: 1.2em;
-      border-bottom: 1px solid #eaecf0;
-      padding-bottom: 0.7em;
-      display: block;
-      word-break: break-all;
-    }
-    .toc {
-      background: #f6f6f6;
-      border: 1px solid #a2a9b1;
-      border-radius: 4px;
-      padding: 1em 1.2em;
-      margin: 2.1em 0 2.1em 0;
-      font-size: .97em;
-      max-width: 370px;
-    }
-    .toc-title {
-      font-weight: bold;
-      margin-bottom: 0.5em;
-      font-size: 1.07em;
-      color: #393939;
-    }
-    .toc ul {
-      margin: 0;
-      padding-left: 1.3em;
-      list-style: decimal;
-    }
-    .toc li {
-      margin: 0.25em 0;
-      line-height: 1.5;
-    }
-    h2, h3 {
-      color: #2a4b7c;
-      font-weight: 600;
-      margin-top: 2em;
-      margin-bottom: .7em;
-      line-height: 1.25;
-    }
-    h3 {
-      font-size: 1.11em;
-      color: #30507d;
-      margin-top: 1.3em;
-    }
-    a { color: #3366cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    .mw-footer {
-      text-align: center;
-      font-size: .98em;
-      color: #888;
-      margin-top: 3.7em;
-      padding: 1.7em 0 0.6em 0;
-      border-top: 1px solid #dbe1e8;
-      background: none;
-    }
-    @media (max-width: 650px) {
-      .mw-header-inner, .mw-body { padding: 0 .7em; }
-      .toc { font-size: 1em; padding: .8em 0.7em; }
-      .mw-title { font-size: 1.35em; }
-    }
-  </style>
+  <link rel="stylesheet" href="css/wiki.css">
 </head>
 <body>
-  <header class="mw-header">
-    <div class="mw-header-inner">
-      <span class="mw-header-logo">
-        <!-- Logo buku ala Wikipedia -->
-        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" aria-label="Wiki Logo">
-          <rect x="3" y="5" width="14" height="16" rx="2" fill="#e5e9f3" stroke="#a2a9b1" stroke-width="1.2"/>
-          <rect x="7" y="3" width="14" height="16" rx="2" fill="#fff" stroke="#a2a9b1" stroke-width="1.2"/>
-          <path d="M9 7h9M9 10h9M9 13h9M9 16h7" stroke="#6c7ca4" stroke-width="1.1" stroke-linecap="round"/>
-        </svg>
-      </span>
-      <a href="/" class="mw-header-title">paketdieng.my.id</a>
-    </div>
-  </header>
+  <div id="mw-header"></div>
+
   <article class="mw-body">
     <h1 class="mw-title">Paket Wisata Dieng</h1>
+    <img src="img/paket-dieng.jpg" alt="Paket wisata di Dieng">
     <span class="mw-url">Situs ini: <a href="/">https://paketdieng.my.id/</a></span>
 
     <nav class="toc" aria-label="Daftar isi">
@@ -164,16 +29,16 @@
 
     <h2 id="definisi">Definisi</h2>
     <p>
-      <strong>Paket wisata Dieng</strong> adalah rangkaian layanan perjalanan wisata ke kawasan <a href="/dataran-tinggi-dieng">Dataran Tinggi Dieng</a>, Jawa Tengah, yang disusun dalam satu paket terintegrasi. Paket ini umumnya meliputi <a href="transportasi-dieng">transportasi</a>, <a href="tiket-wisata-dieng">
-tiket masuk destinasi wisata</a>, <a href="/penginapan-dieng">penginapan</a> (untuk paket lebih dari 1 hari), konsumsi, serta <a href="/pemandu-wisata-dieng">pemandu wisata</a>. Semua layanan dirancang agar wisatawan dapat menikmati perjalanan dengan lebih mudah, terorganisir, dan efisien waktu.
+      <strong>Paket wisata Dieng</strong> adalah rangkaian layanan perjalanan wisata ke kawasan <a href="/dataran-tinggi-dieng.html">Dataran Tinggi Dieng</a>, Jawa Tengah, yang disusun dalam satu paket terintegrasi. Paket ini umumnya meliputi <a href="transportasi-dieng.html">transportasi</a>, <a href="tiket-wisata-dieng.html">
+tiket masuk destinasi wisata</a>, <a href="penginapan-dieng.html">penginapan</a> (untuk paket lebih dari 1 hari), konsumsi, serta <a href="pemandu-wisata-dieng.html">pemandu wisata</a>. Semua layanan dirancang agar wisatawan dapat menikmati perjalanan dengan lebih mudah, terorganisir, dan efisien waktu.
     </p>
 
     <h2 id="manfaat">Manfaat Paket Wisata</h2>
     <ul>
       <li>Memberikan kemudahan dalam perencanaan perjalanan tanpa harus mengatur detail logistik sendiri.</li>
-      <li>Waktu kunjungan lebih efisien dengan <a href="/itinerary-dieng">itinerary</a> terjadwal.</li>
+      <li>Waktu kunjungan lebih efisien dengan <a href="itinerary-dieng.html">itinerary</a> terjadwal.</li>
       <li>Biaya lebih transparan dan cenderung hemat karena sudah termasuk tiket destinasi, transportasi, dan layanan lain.</li>
-      <li>Adanya pemandu atau tour leader yang membantu wisatawan memahami <a href="/wisata-dieng">wisata Dieng</a> secara lebih baik.</li>
+      <li>Adanya pemandu atau tour leader yang membantu wisatawan memahami <a href="wisata-dieng.html">wisata Dieng</a> secara lebih baik.</li>
       <li>Mengurangi risiko kesalahan rute, keterlambatan, atau informasi kurang akurat seputar wisata Dieng.</li>
     </ul>
 
@@ -210,24 +75,30 @@ tiket masuk destinasi wisata</a>, <a href="/penginapan-dieng">penginapan</a> (un
     <h2 id="pilihan">Pilihan Paket 1–3 Hari</h2>
     <ul>
       <li>
-        <strong><a href="/paket-wisata-1-hari">Paket 1 Hari</a>:</strong> Wisata singkat, berangkat dini hari atau pagi, kunjungan ke beberapa destinasi utama, biasanya tanpa menginap.
+        <strong><a href="paket-wisata-1-hari.html">Paket 1 Hari</a>:</strong> Wisata singkat, berangkat dini hari atau pagi, kunjungan ke beberapa destinasi utama, biasanya tanpa menginap.
       </li>
       <li>
-        <strong><a href="/paket-wisata-2-hari">Paket 2 Hari 1 Malam</a>:</strong> Termasuk menginap satu malam di Dieng atau Wonosobo, itinerary lebih lengkap, waktu lebih fleksibel untuk eksplorasi.
+        <strong><a href="paket-wisata-2-hari.html">Paket 2 Hari 1 Malam</a>:</strong> Termasuk menginap satu malam di Dieng atau Wonosobo, itinerary lebih lengkap, waktu lebih fleksibel untuk eksplorasi.
       </li>
       <li>
-        <strong><a href="/paket-wisata-3-hari">Paket 3 Hari 2 Malam</a>:</strong> Pilihan untuk wisatawan yang ingin menikmati lebih banyak destinasi dan pengalaman, cocok untuk keluarga atau group.
+        <strong><a href="paket-wisata-3-hari.html">Paket 3 Hari 2 Malam</a>:</strong> Pilihan untuk wisatawan yang ingin menikmati lebih banyak destinasi dan pengalaman, cocok untuk keluarga atau group.
       </li>
     </ul>
 
     <h2 id="penutup">Penutup</h2>
-    <p>
-      Informasi pada halaman ini disusun secara netral untuk referensi wisatawan atau peneliti yang ingin mengetahui seluk-beluk paket wisata Dieng. Semua isi bukan promosi, dan situs <a href="https://paketdieng.my.id/">paketdieng.my.id</a> tidak menawarkan penjualan atau layanan perjalanan wisata.
-    </p>
+<p>
+  Paket wisata Dieng merupakan pilihan yang efektif bagi wisatawan yang ingin menikmati pesona alam dan budaya Dataran Tinggi Dieng tanpa perlu repot mengatur detail perjalanan secara mandiri. Melalui sistem yang sudah terorganisir, wisatawan dapat memperoleh berbagai kemudahan mulai dari transportasi, penginapan, tiket destinasi, konsumsi, hingga pemandu wisata. Keberadaan paket wisata ini tidak hanya menghemat waktu dan biaya, tetapi juga meminimalisir risiko hambatan selama perjalanan, sehingga pengalaman menjelajah Dieng menjadi lebih nyaman, aman, dan berkesan.
+</p>
+<p>
+  Beragamnya pilihan paket, mulai dari perjalanan satu hari hingga beberapa hari, memungkinkan setiap orang untuk menyesuaikan kunjungan sesuai kebutuhan, durasi, dan anggaran. Dengan fasilitas yang umumnya telah mencakup berbagai aspek perjalanan, paket wisata Dieng dapat menjadi referensi utama bagi individu, keluarga, maupun kelompok yang ingin mengenal dan menikmati kekayaan alam, sejarah, serta kearifan lokal kawasan Dieng. Informasi yang tersaji di halaman ini diharapkan dapat memberikan gambaran menyeluruh bagi siapa saja yang berencana berwisata ke Dieng, maupun yang sekadar ingin mengetahui ragam layanan perjalanan yang tersedia.
+</p>
+
   </article>
-  <footer class="mw-footer">
-    Paket Wisata Dieng.<br>
-    &copy; 2025 paketdieng.my.id
-  </footer>
+
+  <div id="mw-footer"></div>
+  <script>
+    fetch("header.html").then(r=>r.text()).then(t=>document.getElementById("mw-header").outerHTML = t);
+    fetch("footer.html").then(r=>r.text()).then(t=>document.getElementById("mw-footer").outerHTML = t);
+  </script>
 </body>
 </html>
