--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@ tiket masuk destinasi wisata</a>, <a href="penginapan-dieng.html">penginapan</a>
 <p>
   Beragamnya pilihan paket, mulai dari perjalanan satu hari hingga beberapa hari, memungkinkan setiap orang untuk menyesuaikan kunjungan sesuai kebutuhan, durasi, dan anggaran. Dengan fasilitas yang umumnya telah mencakup berbagai aspek perjalanan, paket wisata Dieng dapat menjadi referensi utama bagi individu, keluarga, maupun kelompok yang ingin mengenal dan menikmati kekayaan alam, sejarah, serta kearifan lokal kawasan Dieng. Informasi yang tersaji di halaman ini diharapkan dapat memberikan gambaran menyeluruh bagi siapa saja yang berencana berwisata ke Dieng, maupun yang sekadar ingin mengetahui ragam layanan perjalanan yang tersedia.
 </p>
+<h2 id="faq">FAQ – Pertanyaan Umum tentang Paket Wisata Dieng</h2>
+<div class="faq-list">
+  <h3>Apa itu paket wisata Dieng?</h3>
+  <p>Paket wisata Dieng adalah layanan perjalanan terintegrasi ke kawasan Dieng, Jawa Tengah, meliputi transportasi, tiket masuk destinasi, penginapan, konsumsi, hingga pemandu wisata. Semua dirancang untuk memudahkan perjalanan wisatawan.</p>
+  
+  <h3>Apakah paket wisata Dieng selalu termasuk penginapan?</h3>
+  <p>Tidak selalu. Paket satu hari umumnya tanpa penginapan, sedangkan paket dua hari atau lebih biasanya sudah termasuk penginapan di Dieng atau Wonosobo.</p>
+  
+  <h3>Apakah bisa memilih destinasi di dalam paket?</h3>
+  <p>Kebanyakan paket sudah punya itinerary tetap, tetapi beberapa penyedia wisata menyediakan opsi custom sesuai permintaan peserta, terutama untuk group atau private trip.</p>
+  
+  <h3>Berapa harga rata-rata paket wisata Dieng?</h3>
+  <p>Harga bervariasi tergantung durasi, jumlah peserta, fasilitas, dan asal keberangkatan. Umumnya mulai ratusan ribu rupiah per orang untuk paket sharing, hingga jutaan rupiah untuk private/group eksklusif.</p>
+  
+  <h3>Apa saja destinasi populer dalam paket wisata Dieng?</h3>
+  <p>Destinasi umum meliputi Bukit Sikunir, Kawah Sikidang, Candi Arjuna, Telaga Warna, Telaga Pengilon, Batu Ratapan Angin, Dieng Plateau Theater, dan Telaga Menjer.</p>
+  
+  <h3>Bagaimana cara memesan atau mendapatkan informasi terbaru?</h3>
+  <p>Wisatawan sebaiknya mencari informasi dan pemesanan melalui penyedia jasa terpercaya, situs resmi, atau kontak langsung dengan agen wisata yang sudah terverifikasi.</p>
+  
+  <h3>Apakah tersedia paket untuk keluarga atau rombongan besar?</h3>
+  <p>Tersedia. Banyak penyedia wisata Dieng menawarkan paket khusus untuk keluarga, komunitas, sekolah, hingga perusahaan, dengan fasilitas dan harga yang bisa dinegosiasikan.</p>
+  
+  <h3>Apakah sudah termasuk asuransi perjalanan?</h3>
+  <p>Asuransi perjalanan biasanya bersifat opsional, tergantung paket dan kebijakan penyedia jasa. Pastikan bertanya atau meminta info detail sebelum berangkat.</p>
+</div>
 
   </article>
 
@@ -100,5 +126,78 @@ tiket masuk destinasi wisata</a>, <a href="penginapan-dieng.html">penginapan</a>
     fetch("header.html").then(r=>r.text()).then(t=>document.getElementById("mw-header").outerHTML = t);
     fetch("footer.html").then(r=>r.text()).then(t=>document.getElementById("mw-footer").outerHTML = t);
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Apa itu paket wisata Dieng?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Paket wisata Dieng adalah layanan perjalanan terintegrasi ke kawasan Dieng, Jawa Tengah, meliputi transportasi, tiket masuk destinasi, penginapan, konsumsi, hingga pemandu wisata. Semua dirancang untuk memudahkan perjalanan wisatawan."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Apakah paket wisata Dieng selalu termasuk penginapan?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Tidak selalu. Paket satu hari umumnya tanpa penginapan, sedangkan paket dua hari atau lebih biasanya sudah termasuk penginapan di Dieng atau Wonosobo."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Apakah bisa memilih destinasi di dalam paket?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Kebanyakan paket sudah punya itinerary tetap, tetapi beberapa penyedia wisata menyediakan opsi custom sesuai permintaan peserta, terutama untuk group atau private trip."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Berapa harga rata-rata paket wisata Dieng?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Harga bervariasi tergantung durasi, jumlah peserta, fasilitas, dan asal keberangkatan. Umumnya mulai ratusan ribu rupiah per orang untuk paket sharing, hingga jutaan rupiah untuk private/group eksklusif."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Apa saja destinasi populer dalam paket wisata Dieng?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Destinasi umum meliputi Bukit Sikunir, Kawah Sikidang, Candi Arjuna, Telaga Warna, Telaga Pengilon, Batu Ratapan Angin, Dieng Plateau Theater, dan Telaga Menjer."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Bagaimana cara memesan atau mendapatkan informasi terbaru?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Wisatawan sebaiknya mencari informasi dan pemesanan melalui penyedia jasa terpercaya, situs resmi, atau kontak langsung dengan agen wisata yang sudah terverifikasi."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Apakah tersedia paket untuk keluarga atau rombongan besar?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Tersedia. Banyak penyedia wisata Dieng menawarkan paket khusus untuk keluarga, komunitas, sekolah, hingga perusahaan, dengan fasilitas dan harga yang bisa dinegosiasikan."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Apakah sudah termasuk asuransi perjalanan?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Asuransi perjalanan biasanya bersifat opsional, tergantung paket dan kebijakan penyedia jasa. Pastikan bertanya atau meminta info detail sebelum berangkat."
+      }
+    }
+  ]
+}
+</script>
+
 </body>
 </html>
