--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Paket Wisata Dieng 2025 — Informasi paket tour Dieng terbaru</title>
+  <title>Informasi Paket Wisata Dieng 2025 | Rute, Fasilitas, Destinasi & Tips</title>
   <link rel="canonical" href="https://paketdieng.my.id/">
   <link rel="stylesheet" href="css/wiki.css">
 </head>
@@ -15,17 +15,19 @@
     <img src="img/paket-dieng.jpg" alt="Paket wisata di Dieng">
     <span class="mw-url">Situs ini: <a href="/">https://paketdieng.my.id/</a></span>
 
-    <nav class="toc" aria-label="Daftar isi">
-      <div class="toc-title">Daftar isi</div>
-      <ul>
-        <li><a href="#definisi">Definisi</a></li>
-        <li><a href="#manfaat">Manfaat Paket Wisata</a></li>
-        <li><a href="#fasilitas">Fasilitas Umum</a></li>
-        <li><a href="#destinasi">Destinasi Populer</a></li>
-        <li><a href="#pilihan">Pilihan Paket 1–3 Hari</a></li>
-        <li><a href="#penutup">Penutup</a></li>
-      </ul>
-    </nav>
+<nav class="toc" aria-label="Daftar isi">
+  <div class="toc-title">Daftar isi</div>
+  <ul>
+    <li><a href="#definisi">Definisi</a></li>
+    <li><a href="#manfaat">Manfaat Paket Wisata</a></li>
+    <li><a href="#fasilitas">Fasilitas Umum</a></li>
+    <li><a href="#destinasi">Destinasi Populer</a></li>
+    <li><a href="#pilihan">Pilihan Paket 1–3 Hari</a></li>
+    <li><a href="#penutup">Penutup</a></li>
+    <li><a href="#faq">FAQ – Pertanyaan Umum</a></li>
+  </ul>
+</nav>
+
 
     <h2 id="definisi">Definisi</h2>
     <p>
