--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li><a href="#fasilitas">Fasilitas Umum</a></li>
     <li><a href="#destinasi">Destinasi Populer</a></li>
     <li><a href="#pilihan">Pilihan Paket 1–3 Hari</a></li>
+    <li><a href="#harga">Harga paket tour Dieng</a></li>
     <li><a href="#penutup">Penutup</a></li>
     <li><a href="#faq">FAQ – Pertanyaan Umum</a></li>
   </ul>
@@ -86,6 +87,16 @@ tiket masuk destinasi wisata</a>, <a href="penginapan-dieng.html">penginapan</a>
         <strong><a href="paket-wisata-3-hari.html">Paket 3 Hari 2 Malam</a>:</strong> Pilihan untuk wisatawan yang ingin menikmati lebih banyak destinasi dan pengalaman, cocok untuk keluarga atau group.
       </li>
     </ul>
+<h2 id="harga">Harga Paket ke Dieng 2025</h2>
+<p>
+  Berikut adalah estimasi harga paket wisata Dieng terbaru yang umum ditawarkan berbagai penyedia perjalanan di tahun 2025. Harga bisa berbeda tergantung jumlah peserta, fasilitas, dan titik keberangkatan.
+</p>
+<ul>
+  <li><strong>Paket 1 Hari:</strong> mulai <b>Rp275.000/orang</b></li>
+  <li><strong>Paket 2 Hari 1 Malam:</strong> mulai <b>Rp950.000/orang</b></li>
+  <li><strong>Paket 3 Hari 2 Malam:</strong> mulai <b>Rp1.450.000/orang</b></li>
+</ul>
+<p style="font-size:.98em;color:#335;">*Harga dapat berubah sewaktu-waktu dan dapat berbeda pada setiap penyedia jasa.</p>
 
     <h2 id="penutup">Penutup</h2>
 <p>
