--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Informasi Paket Wisata Dieng 2025 | Rute, Fasilitas, Destinasi & Tips</title>
   <link rel="canonical" href="https://paketdieng.my.id/">
   <link rel="stylesheet" href="css/wiki.css">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 </head>
 <body>
   <div id="mw-header"></div>
