--- a/paket-wisata-1-hari.html
+++ b/paket-wisata-1-hari.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Paket Wisata Dieng 1 Hari — One Day Tour Dieng</title>
   <link rel="canonical" href="https://paketdieng.my.id/paket-wisata-1-hari">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   <style>
     body {
       background: #f8f9fa;
