--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Informasi Paket Wisata Dieng 2025 | Rute, Fasilitas, Destinasi & Tips</title>
+  <title>Informasi Paket Wisata Dieng 2025 | Harga, Rute, Fasilitas, Destinasi & Tips</title>
   <link rel="canonical" href="https://paketdieng.my.id/" />
   <link rel="stylesheet" href="css/wiki.css" />
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
